tests/sumo/errors/missing_first_param/errors.sumo
Error: Missing value for parameter 'n'.
Error: Could not parse commandline options.
Quitting (on error).
